Letter spacing bug fix

--- a/REACT_GL/src/components/Benefits/Benefits.css
+++ b/REACT_GL/src/components/Benefits/Benefits.css
@@ -87,7 +87,6 @@
     font-size: 18px;
     width: 300px;
     margin: 0px;
-    letter-spacing: 110%;
     text-align: justify;
   }
 
@@ -97,7 +96,6 @@
     font-size: 18px;
     width: 400px;
     margin: 0px;
-    letter-spacing: 0.2px;
     text-align: justify;
 
   }
